[package]
name = "gcp-pubsub"
version = "0.1.0"
authors = ["tehAnswer <sergiorodriguezgijon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = { version = "1.0.2", features = ["native-client"] }
runtime = { version = "0.3.0-alpha.7" }
futures-preview = { version = "0.3.0-alpha.18" }
goauth = { version = "0.6.0-beta1" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.40"
smpl_jwt = "0.4.0"
base64 = "0.10.1"
nanoid = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }